Add MongoDB integration

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, STDOUT_ERROR, STDOUT_WARN, STDOUT_INFO, STDOUT_DEBUG,STDOUT_TRACE
+log4j.rootLogger=INFO, STDOUT_ERROR, STDOUT_WARN, STDOUT_INFO, STDOUT_DEBUG,STDOUT_TRACE
 
 log4j.appender.STDOUT_ERROR=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT_ERROR.layout=org.apache.log4j.PatternLayout
