--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,12 +2,12 @@ log4j.rootLogger=INFO, STDOUT_ERROR, STDOUT_WARN, STDOUT_INFO, STDOUT_DEBUG,STDO
 
 log4j.appender.STDOUT_ERROR=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT_ERROR.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT_ERROR.layout.conversionPattern=\u001b[31;1m%5p [%t] (%F:%L) - %m%n
+log4j.appender.STDOUT_ERROR.layout.conversionPattern=\u001b[31;1m%5p [%t] (%F:%L) %d{HH:mm:ss} - %m%n
 log4j.appender.STDOUT_ERROR.threshold=ERROR
 
 log4j.appender.STDOUT_WARN=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT_WARN.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT_WARN.layout.conversionPattern=\u001b[33;1m%5p [%t] (%F:%L) - %m%n
+log4j.appender.STDOUT_WARN.layout.conversionPattern=\u001b[33;1m%5p [%t] (%F:%L) %d{HH:mm:ss} - %m%n
 log4j.appender.STDOUT_WARN.threshold=WARN
 log4j.appender.STDOUT_WARN.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.STDOUT_WARN.filter.filter1.levelMin=WARN
@@ -15,7 +15,7 @@ log4j.appender.STDOUT_WARN.filter.filter1.levelMax=WARN
 
 log4j.appender.STDOUT_INFO=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT_INFO.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT_INFO.layout.conversionPattern=\u001b[0m%5p [%t] (%F:%L) - %m%n
+log4j.appender.STDOUT_INFO.layout.conversionPattern=\u001b[0m%5p [%t] (%F:%L) %d{HH:mm:ss} - %m%n
 log4j.appender.STDOUT_INFO.threshold=INFO
 log4j.appender.STDOUT_INFO.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.STDOUT_INFO.filter.filter1.levelMin=INFO
@@ -23,7 +23,7 @@ log4j.appender.STDOUT_INFO.filter.filter1.levelMax=INFO
 
 log4j.appender.STDOUT_DEBUG=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT_DEBUG.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT_DEBUG.layout.conversionPattern=\u001b[0;36m%5p [%t] (%F:%L) - %m%n
+log4j.appender.STDOUT_DEBUG.layout.conversionPattern=\u001b[0;36m%5p [%t] (%F:%L) %d{HH:mm:ss} - %m%n
 log4j.appender.STDOUT_DEBUG.threshold=DEBUG
 log4j.appender.STDOUT_DEBUG.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.STDOUT_DEBUG.filter.filter1.levelMin=DEBUG
@@ -31,7 +31,7 @@ log4j.appender.STDOUT_DEBUG.filter.filter1.levelMax=DEBUG
 
 log4j.appender.STDOUT_TRACE=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT_TRACE.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT_TRACE.layout.conversionPattern=\u001b[0;30;1m%5p [%t] (%F:%L) - %m%n
+log4j.appender.STDOUT_TRACE.layout.conversionPattern=\u001b[0;30;1m%5p [%t] (%F:%L) %d{HH:mm:ss} - %m%n
 log4j.appender.STDOUT_TRACE.threshold=TRACE
 log4j.appender.STDOUT_TRACE.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.STDOUT_TRACE.filter.filter1.levelMin=TRACE
