--- a/.github/workflows/loc-update.yml
+++ b/.github/workflows/loc-update.yml
@@ -1,14 +1,19 @@
 name: LoC Update
 
-on: [ workflow_dispatch
-  jobs:
-    update:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
-        - name: Build docker image
-          run: docker build -f docker/Dockerfile -t starrylines .
-        - name: Run
-          run: |
-          docker run -e 'GITHUB_TOKEN=${ { secrets.GITHUB_TOKEN } }' -e 'MONGO_SECRET=${ { secrets.MONGO_SECRET } }' -e 'MONGO_USER=${ { secrets.MONGO_USER } }' starrylines getloc javascript kotlin java
+on: [ workflow_dispatch ]
+
+jobs:
+  update:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build docker image
+        run: docker build -f docker/Dockerfile -t starrylines .
+      - name: Run
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MONGO_SECRET: ${{ secrets.MONGO_SECRET }}
+          MONGO_USER: ${{ secrets.MONGO_USER }}
+        run: |
+          docker run -e 'GITHUB_TOKEN=$GITHUB_TOKEN' -e 'MONGO_SECRET=$MONGO_SECRET' -e 'MONGO_USER=$MONGO_USER' starrylines getloc javascript kotlin java
