--- a/.github/workflows/loc-update.yml
+++ b/.github/workflows/loc-update.yml
@@ -12,4 +12,4 @@ jobs:
         run: docker build -f docker/Dockerfile -t starrylines_${{ github.sha }} . --no-cache
       - name: Run
         run: |
-          docker run -e 'GITHUB_TOKEN= ${{ secrets.GITHUB_TOKEN }}' -e 'MONGO_SECRET=${{ secrets.MONGO_SECRET }}' -e 'MONGO_USER=${{ secrets.MONGO_USER }}' -e 'MONGO_CLUSTER=${{ secrets.MONGO_CLUSTER }}' starrylines_${{ github.sha }} getloc all
+          docker run -e 'GITHUB_TOKEN= ${{ secrets.GITHUB_TOKEN }}' -e 'MONGO_SECRET=${{ secrets.MONGO_SECRET }}' -e 'MONGO_USER=${{ secrets.MONGO_USER }}' -e 'MONGO_CLUSTER=${{ secrets.MONGO_CLUSTER }}' -e 'MONGO_DATABASE=${{ secrets.MONGO_DATABASE }}' starrylines_${{ github.sha }} getloc all
