--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   getloc:
-    steps:
-      - uses: run PabloLec/StarryLines/.github/workflows/run.yml@main
-        with:
-          args: 'fetch all'
+    uses: run PabloLec/StarryLines/.github/workflows/run.yml@main
+    with:
+      args: 'fetch all'
