--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,6 +12,17 @@ on:
       args:
         required: true
         type: string
+    secrets:
+      GITHUB_TOKEN:
+        required: true
+      MONGO_SECRET:
+        required: true
+      MONGO_USER:
+        required: true
+      MONGO_CLUSTER:
+        required: true
+      MONGO_DATABASE:
+        required: true
 
 jobs:
   loc-update:
