--- a/.github/workflows/tops.yml
+++ b/.github/workflows/tops.yml
@@ -6,7 +6,7 @@ on:
     - cron: '30 7 * * *'
 
 jobs:
-  getloc:
+  tops:
     uses: PabloLec/StarryLines/.github/workflows/run.yml@main
     with:
       args: 'top all'
