--- a/.github/workflows/deploy_workers.yml
+++ b/.github/workflows/deploy_workers.yml
@@ -26,3 +26,5 @@ jobs:
         env:
           REALM_APPID: ${{ secrets.REALM_APPID }}
           MONGO_API_KEY: ${{ secrets.MONGO_API_KEY }}
+        run: |
+          cd src/main/workers
