Finalize workers config

--- a/src/main/workers/wrangler.toml
+++ b/src/main/workers/wrangler.toml
@@ -1,19 +1,18 @@
 name = "mongo-proxy"
-type = "javascript"
+main = "build/index.mjs"
 compatibility_date = "2022-09-22"
 workers_dev = true
+kv_namespaces = [
+    { binding = "StarryLinesTop", id = "814e96bb9e8b4ab082856f6184db30d9", preview_id = "165396dc2ed6466489147dee2ca50906" }
+]
 
 [build]
 command = "npm run build"
 
-[build.upload]
-dir = "build"
-main = "./index.mjs"
-format = "modules"
 
 [env.production]
 workers_dev = false
 route = "https://starrylines-worker.pablolec.dev/*"
 kv_namespaces = [
-    { binding = "StarryLinesTop", id = "814e96bb9e8b4ab082856f6184db30d9" }
+    { binding = "StarryLinesTop", id = "814e96bb9e8b4ab082856f6184db30d9", preview_id = "165396dc2ed6466489147dee2ca50906" }
 ]
