--- a/.github/workflows/getloc_dart.yml
+++ b/.github/workflows/getloc_dart.yml
@@ -1,4 +1,4 @@
-name: Get LoC - C
+name: Get LoC - Dart
 
 on:
   workflow_dispatch:
@@ -9,7 +9,7 @@ jobs:
   getloc:
     uses: PabloLec/StarryLines/.github/workflows/run.yml@main
     with:
-      args: getloc c
+      args: getloc dart
     secrets:
       MONGO_USER: ${{ secrets.MONGO_USER }}
       MONGO_SECRET: ${{ secrets.MONGO_SECRET }}
