--- a/.github/workflows/blacklist.yml
+++ b/.github/workflows/blacklist.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           python-version: '3.10'
       - working-directory: ./src/utils
+        env:
+          MONGO_USER: ${{ secrets.MONGO_USER }}
+          MONGO_SECRET: ${{ secrets.MONGO_SECRET }}
+          MONGO_DATABASE: ${{ secrets.MONGO_DATABASE }}
+          MONGO_CLUSTER: ${{ secrets.MONGO_CLUSTER }}
         run: |
           python3 -m pip install --upgrade pip
           pip install -r requirements.txt
