Add blacklist by size utils

--- a/.github/workflows/blacklist.yml
+++ b/.github/workflows/blacklist.yml
@@ -23,3 +23,4 @@ jobs:
           python3 -m pip install --upgrade pip
           pip install -r requirements.txt
           python3 blacklist_by_word.py
+          python3 blacklist_by_size.py
