Add Dependabot analysis for vue

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,3 +24,9 @@ updates:
       interval: "daily"
     assignees:
       - "PabloLec"
+  - package-ecosystem: "npm"
+    directory: "/src/main/vue"
+    schedule:
+      interval: "daily"
+    assignees:
+      - "PabloLec"
