--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "autoprefixer": "^9.8.8",
     "core-js": "^3.8.3",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "vue": "^3.2.13",
     "vue3-easy-data-table": "^1.4.19"
   },
