--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -13,6 +13,7 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.40",
+    "vue3-carousel": "^0.1.47",
     "vue3-easy-data-table": "^1.4.19"
   },
   "devDependencies": {
