--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -11,9 +11,9 @@
     "autoprefixer": "^10.4.12",
     "core-js": "^3.8.3",
     "postcss": "^8.4.16",
+    "swiper": "^8.4.2",
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.40",
-    "vue3-carousel": "^0.1.47",
     "vue3-easy-data-table": "^1.4.19"
   },
   "devDependencies": {
