Add prerender worker

--- a/src/main/workers/api/package.json
+++ b/src/main/workers/api/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "mongo-proxy",
+  "name": "cf-worker",
   "scripts": {
     "build": "worktop build index.ts",
     "types": "tsc --noEmit --skipLibCheck"
