--- a/src/main/workers/api/tsconfig.json
+++ b/src/main/workers/api/tsconfig.json
@@ -17,8 +17,5 @@
     "noImplicitAny": true,
     "module": "es2020"
   },
-  "include": [
-    "@types",
-    "src"
-  ]
+  "include": ["@types", "src"]
 }
