--- a/.github/workflows/deploy_workers.yml
+++ b/.github/workflows/deploy_workers.yml
@@ -14,10 +14,17 @@ jobs:
     name: Deploy
     steps:
       - uses: actions/checkout@v3
-      - name: Publish
+      - name: Publish mongo-proxy
         uses: cloudflare/wrangler-action@2.0.0
         with:
-          preCommands: cd src/main/workers && npm install .
+          preCommands: cd src/main/workers/api && npm install .
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
           command: publish --env production --var REALM_APPID:${{ secrets.REALM_APPID }} --var MONGO_API_KEY:${{ secrets.MONGO_API_KEY }}
+      - name: Publish prerender
+        uses: cloudflare/wrangler-action@2.0.0
+        with:
+          preCommands: cd src/main/workers/prerender && npm install .
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          command: publish --env production --var API_TOKEN:${{ secrets.PRERENDER_API_KEY }}
