Fix sonar sources

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -65,5 +65,5 @@ jobs:
             -Dsonar.projectKey=PabloLec_StarryLines
             -Dsonar.coverage.jacoco.xmlReportPaths=./build/reports/kover/xml/report.xml
             -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.sources=./src/main
+            -Dsonar.sources=./src/main/kotlin
             -Dsonar.coverage.exclusions=**/Interface.kt,**/SupportedLanguage.kt
