--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -14,6 +14,7 @@
     "swiper": "^8.4.2",
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.37",
+    "vue-final-modal": "^3.4.4",
     "vue3-easy-data-table": "^1.4.19"
   },
   "devDependencies": {
