--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.37",
     "vue-final-modal": "^3.4.4",
+    "vue-router": "4",
     "vue3-easy-data-table": "^1.4.19"
   },
   "devDependencies": {
