--- a/.github/workflows/tops.yml
+++ b/.github/workflows/tops.yml
@@ -15,3 +15,13 @@ jobs:
       MONGO_SECRET: ${{ secrets.MONGO_SECRET }}
       MONGO_DATABASE: ${{ secrets.MONGO_DATABASE }}
       MONGO_CLUSTER: ${{ secrets.MONGO_CLUSTER }}
+  translate:
+    uses: PabloLec/StarryLines/.github/workflows/run.yml@main
+    with:
+      args: 'translate all'
+    secrets:
+      MONGO_USER: ${{ secrets.MONGO_USER }}
+      MONGO_SECRET: ${{ secrets.MONGO_SECRET }}
+      MONGO_DATABASE: ${{ secrets.MONGO_DATABASE }}
+      MONGO_CLUSTER: ${{ secrets.MONGO_CLUSTER }}
+      DEEPL_TOKEN: ${{ secrets.DEEPL_TOKEN }}
