--- a/src/main/vue/package.json
+++ b/src/main/vue/package.json
@@ -9,19 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.16",
-    "swiper": "^8.4.2",
-    "tailwindcss": "^3.1.8",
-    "vue": "^3.2.37",
-    "vue-final-modal": "^3.4.4",
-    "vue-router": "4",
-    "vue3-easy-data-table": "^1.4.19"
+    "autoprefixer": "10.4.13",
+    "postcss": "8.4.20",
+    "swiper": "8.4.5",
+    "tailwindcss": "3.2.4",
+    "vue": "3.2.45",
+    "vue-final-modal": "3.4.11",
+    "vue-router": "4.1.6",
+    "vue3-easy-data-table": "1.5.24"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0",
-    "vue-tsc": "^1.0.3"
+    "@vitejs/plugin-vue": "3.2.0",
+    "typescript": "4.9.4",
+    "vite": "3.2.5",
+    "vue-tsc": "1.0.18"
   }
 }
