--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,13 +5,6 @@ on:
     branches:
       - main
       - develop
-    paths:
-      - 'src/main/kotlin/**'
-      - 'src/test/kotlin/**'
-      - 'build.gradle.kts'
-      - 'settings.gradle.kts'
-      - 'gradle.properties'
-      - 'gradlew'
   workflow_call:
     secrets:
       MONGO_USER_TEST:
@@ -27,8 +20,8 @@ on:
 
 
 jobs:
-  build:
-    name: build
+  backend:
+    name: backend
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -45,7 +38,7 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
 
-      - name: Run build
+      - name: Run Backend build
         env:
           MONGO_USER: ${{ secrets.MONGO_USER_TEST }}
           MONGO_SECRET: ${{ secrets.MONGO_SECRET_TEST }}
@@ -62,6 +55,33 @@ jobs:
           name: Test report
           path: build/reports/tests/test
 
+  frontend:
+    name: frontend
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src/main/vue
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: np
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run Frontend build
+        run: vue-tsc --noEmit && vite build
+
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    needs: [backend, frontend]
+    steps:
+      - uses: actions/checkout@v3
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
