Download tests report artifact before sonarcloud job

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,12 +48,12 @@ jobs:
         run: |
           ./gradlew clean build --stacktrace --info
 
-      - name: Archive test report
+      - name: Archive tests report
         if: always()
         uses: actions/upload-artifact@v3
         with:
-          name: Test report
-          path: build/reports/tests/test
+          name: Tests report
+          path: build/reports
 
   frontend:
     name: frontend
@@ -99,6 +99,11 @@ jobs:
     needs: [backend, frontend]
     steps:
       - uses: actions/checkout@v3
+      - name: Download tests report
+        uses: actions/download-artifact@v3
+        with:
+          name: Tests report
+          path: build/reports
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
