--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -104,6 +104,9 @@ jobs:
         with:
           name: Tests report
           path: build/reports
+      - name: List current directory
+        run: tree
+
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
@@ -113,7 +116,7 @@ jobs:
           args: >
             -Dsonar.organization=pablolec
             -Dsonar.projectKey=PabloLec_StarryLines
-            -Dsonar.coverage.jacoco.xmlReportPaths=./build/reports/kover/xml/report.xml
+            -Dsonar.coverage.jacoco.xmlReportPaths=./build/reports/jacoco/test/jacocoTestReport.xml
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.sources=./src/main/kotlin
             -Dsonar.coverage.exclusions=**/Interface.kt,**/SupportedLanguage.kt
